# trinomial

./: .gitignore  CHANGES.md  CONTRIBUTING.md  Makefile  README.md  SUPPORT.md  codemeta.json  requirements.txt  setup.cfg  setup.py
dev/icon/: README.md
tests/: test_trinomial.py
trinomial/: __init__.py  trinomial.py
