# =============================================================================
# @file    setup.cfg
# @brief   Package metadata and PyPI configuration
# @created 2021-03-17
# @license Please see the file named LICENSE in the project directory
# @website https://github.com/caltechlibrary/trinomial
# =============================================================================

[metadata]
name          = trinomial
version       = 0.0.1
description   = A simple name anonymization library
author        = Michael Hucka
author_email  = mhucka@library.caltech.edu
license       = BSD 3-clause
license_files = LICENSE
url           = https://github.com/caltechlibrary/trinomial
# The remaining items below are used by PyPI.
project_urls  =
  Source Code = https://github.com/caltechlibrary/trinomial
  Bug Tracker = https://github.com/caltechlibrary/trinomial/issues
keywords      = Python, utilities
classifiers   =
  Development Status :: 2 - Pre-Alpha
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Operating System :: MacOS :: MacOS X
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Operating System :: Unix
  Operating System :: Microsoft :: Windows
  Programming Language :: Python
  Programming Language :: Python :: 3.8
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = False
python_requires = >= 3.8
